--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^0.21.1",
-    "bootstrap": "4.5.0",
+    "bootstrap": "^4.5.0",
     "chart.js": "^3.3.2",
     "history": "^4.10.1",
     "immer": "^9.0.3",
@@ -16,8 +16,8 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "8.4.1",
-    "webpack": "4.42.0"  
+    "reactstrap": "^8.4.1",
+    "webpack": "4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
