--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "backend",
+  "name": "rest-express",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "lodash": "^4.17.20",
-    "mongoose": "^5.10.9",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "npm": "^6.14.8",
-    "uuid": "^8.3.1"
-  },
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node src/index.js",
+    "dev": "node src/index.js"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@prisma/client": "4.13.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "4.18.2"
+  },
+  "devDependencies": {
+    "prisma": "4.13.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  }
 }
